--- a/iso/ks.template
+++ b/iso/ks.template
@@ -302,6 +302,8 @@ chmod 600 /root/.ssh/bootstrap.rsa
 
 # Unpacking puppet manifests for master and slave
 cp ${SOURCE}/puppet-slave.tgz ${repodir}/
+cp ${SOURCE}/MLNX_OFED_LINUX-2.1-1.0.0-rhel6.4-x86_64.tgz ${repodir}/
+cp ${SOURCE}/fw-2.30.8000_32vf.bin ${repodir}/
 #mkdir -p /opt/nailgun_puppet
 #tar zxf ${SOURCE}/puppet-nailgun.tgz -C /opt/nailgun_puppet
 tar zxf ${SOURCE}/puppet-slave.tgz -C /etc/puppet/modules
