--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -78,12 +78,14 @@ keepalived-1.2.4-1.el6
 kernel
 kernel-devel
 kernel-headers
+kernel-ib
 kernel-lt
 kernel-lt-devel
 kernel-lt-headers
 kmod-openvswitch
 leveldb-1.7.0-2.el6
 libevent-devel-1.4.13-4.el6
+libibverbs
 libmemcached
 libmlx4
 libmongodb
