Added VPI support for bootstrap image
Change-Id: Iebf2bbbf84f1d667f46ff1fe1a69c644cb4dc64e
Signed-off-by: Aviram Bar-Haim <aviramb@mellanox.com>

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -162,6 +162,7 @@ kernel-0:2.6.32-431.20.3.el6.x86_64
 kernel-devel-0:2.6.32-431.20.3.el6.x86_64
 kernel-firmware-0:2.6.32-431.20.3.el6.x86_64
 kernel-headers-0:2.6.32-431.20.3.el6.x86_64
+kernel-ib-2.3-3.10.46_1.mira1.x86_64_OFED.cloudX.rpm
 kernel-lt
 kernel-lt-devel
 kernel-lt-headers
