Added Infiniband support for bootstrap image
This commit adds the Infiniband support to the discovery
stage, with the following changes:
  1. Add Infiniband kernel modules to the
     bootstrap linux kernel.
  2. Add rules to autoload Mellanox drivers in case
     of Mellanox HW detection.
  3. Add a script to create PKEY conversion into
     VLANs in case of Infiniband network PKEYs
     detection.
  4. Add depmod 'extra' directory to the depmod search
     since it's exists in CentOS but removed from
     Ubuntu depmod default configuration file.

DocImpact

Partially implements: blueprint support-infiniband-network

Change-Id: Iebf2bbbf84f1d667f46ff1fe1a69c644cb4dc64e

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -79,14 +79,16 @@ keepalived-1.2.4-1.el6
 kernel
 kernel-devel
 kernel-headers
+#kernel-ib
 kernel-lt
 kernel-lt-devel
 kernel-lt-headers
 kmod-openvswitch
 leveldb-1.7.0-2.el6
 libevent-devel-1.4.13-4.el6
+#libibverbs
 libmemcached
-libmlx4
+#libmlx4
 libmongodb
 libuv-devel-0.10.4-1.el6
 linux-firmware
